# vector-based_terrain_modelling

./: README.md
edition/: CMakeLists.txt  README.md
edition/include/: Kernels.h  MayaSimpleRendererColors.h  VectorTerrainRaytracingWidget.h  graph.h  qte.h  utils.h
edition/include/Kernels/: DetailsKernel.h  FactoryKernel.h  GaussianKernel.h  Kernel.h
edition/include/Tools/: Tool.h  ToolBrush.h  ToolEdit.h  ToolGraph.h
edition/include/libs/: array.h  arrayinteger.h  axis.h  box.h  camera.h  capsule.h  chart.h  circle.h  color.h  cone.h  convex.h  cpu.h  cubic.h  cuboctahedron.h  cuboid.h  curve.h  curvepoint.h  curveset.h  cylinder.h  dodecahedron.h  draw.h  ellipse.h  evector.h  evectorfloat.h  frame.h  gabornoise.h  gpu-shader.h  gpu-wrapper.h  gpuheightfield.h  gputerrainsimu.h  heightfield.h  heightfieldshader.h  hemisphere.h  hexagon.h  histogram.h  ia.h  icosahedron.h  icosidodecahedron.h  ivector.h  linear.h  (+47 more)
edition/shaders/: primitives_acceleration_grid.glsl  primitives_rasterizer.glsl  primitives_raytrace.glsl  simple_colors_fs.glsl  simple_colors_vs.glsl
edition/shaders/libs/: background_fs.glsl  background_vs.glsl  default_fs.glsl  default_gs.glsl  default_vs.glsl  heightfield_analysis.glsl  heightfield_hydraulic.glsl  heightfield_hydraulic_test.glsl  map_processing.glsl  simple_fs.glsl  simple_vs.glsl
edition/src/: VectorTerrainRaytracingWidget.cpp  qte-main-window.cpp
edition/src/libs/: cpu.cpp
